--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - ng build --prod --aot
+      - ng build --configuration production 
   post_build:
      commands:
       - echo Build completed on `date`
